Sun Jul 21 21:08:59 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (bary_mul): Use simple multiplication if yl is small.
	  (rb_cstr_to_inum): Invoke bigsq instead of bigmul0.
	  (bigsq): Re-implemented.
	  (bigmul0): Invoke bigsq if two arguments are identical.

Sun Jul 21 09:58:19 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (bary_mul_toom3): New function based on bigmul1_toom3.
	  (bary_mul_toom3_branch): Call bary_mul_toom3.
	  (rb_big_mul_toom3): Ditto.
	  (bigmul1_toom3): Removed.
	  (big_real_len): Ditto.
	  (big_split): Ditto.
	  (big_split3): Ditto.

Sun Jul 21 08:12:16 2013  Kazuki Tsujimoto  <kazuki@callcc.net>

	* proc.c (proc_to_s): use PRIsVALUE to preserve the result encoding.

Sun Jul 21 03:36:18 2013  NARUSE, Yui  <naruse@ruby-lang.org>

	* hash.c (rb_hash_flatten): use NUM2INT to raise TypeError on 32bit
	  platform. it's introduced by r42039

Sun Jul 21 01:07:45 2013  Benoit Daloze  <eregontp@gmail.com>

	* common.mk (help): Fix environment variable name and argument.
	  Actually it can also be a directory or any argument for
	  test/unit runner. [Fixes GH-363]

Sat Jul 20 22:44:50 2013  Zachary Scott  <e@zzak.io>

	* common.mk: Document running a single test [Fixes GH-363]
	  Patch by Avdi Grimm https://github.com/ruby/ruby/pull/363

Sat Jul 20 22:39:56 2013  Zachary Scott  <e@zzak.io>

	* sample/*: whitespace patch by Sergio Campama [Fixes GH-364]
	  https://github.com/ruby/ruby/pull/364

Sat Jul 20 22:33:13 2013  Zachary Scott  <e@zzak.io>

	* doc/regexp.rdoc: [DOC] Fix typo in example [Fixes GH-365]
	  Patch by Juanito Fatas https://github.com/ruby/ruby/pull/365

Sat Jul 20 17:46:03 2013  NARUSE, Yui  <naruse@ruby-lang.org>

	* string.c (rb_str_succ): add missing case NEIGHBOR_WRAPPED.
	  r42078 caused buggy behavior like "\xFF".b -> "\x01\xFF".b

Sat Jul 20 15:22:38 2013  Koichi Sasada  <ko1@atdot.net>

	* array.c (rb_ary_resize): use simple memcpy because there are no new
	  references.
